--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^4.0.0
+  provider: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
