--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   dio: ^4.0.0
   shared_preferences: ^2.0.6
   flutter_bloc: ^7.2.0 # provider ^6.0.0
+  get_it: ^7.2.0
+  multiple_result: ^1.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
