--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_bloc: ^7.2.0 # provider ^6.0.0
   get_it: ^7.2.0
   multiple_result: ^1.0.4
+  json_serializable: ^4.1.4
+  retrofit: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,8 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  build_runner: ^2.1.1  
+  retrofit_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
