--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,15 +20,18 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.13.0 <3.0.0"
 
+dependency_overrides:
+  meta: ^1.3.0
+
 dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.0
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.0.7
   flutter_bloc: ^7.2.0 # provider ^6.0.0
   get_it: ^7.2.0
   multiple_result: ^1.0.4
-  json_serializable: ^4.1.4
+  json_serializable: ^5.0.0
   retrofit: ^2.0.1
 
 
@@ -37,8 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
-  build_runner: ^2.1.1  
-  retrofit_generator: ^2.0.1
+  build_runner: ^2.1.2
+  retrofit_generator: ^2.0.1+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
